# zephyr_rust_sample

./: CMakeLists.txt  Cargo.toml  README.rst  sample.yaml
src/: lib.rs  main.c
