[package]
name = "zephyr-rust-sample"
version = "0.0.1"
authors = ["Jacek Ozimek <ozimek.jacek@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"] # C

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
panic-halt = "0.2.0"
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.1", default-features = false }

[target."thumbv7m-none-eabihf".dependencies]
panic-halt = "0.2.0"
 
[features]
default = ["std"]
std = []
